# biokb_ipni

./: .env_template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.mysql_neo4j_pma.yml  docker-compose.win.mysql_neo4j_pma.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  tox.ini
docs/: api.md  cli.md  how_to_run_neo4j.md  index.md  installation.md  models.md  run_the_pipeline.md
docs/notebooks/: erdiagram.ipynb  query_examples.ipynb  test_workflow.ipynb  test_workflow_podman.ipynb  tutorial.ipynb
my-docs/: mkdocs.yml  report.md
my-docs/docs/: api_reference.md  data_description.md  database.md  docker_php.md  getstarted.md  index.md  troubleshooting.md
my-docs/presentation/: marp.md
notebooks/: create_er_model.ipynb  create_models.ipynb  test_import.ipynb
src/biokb_ipni/: __init__.py  cli.py  constants.py  tools.py
src/biokb_ipni/api/: main.py  query_tools.py  schemas.py  tags.py
src/biokb_ipni/db/: manager.py  models.py
src/biokb_ipni/rdf/: namespaces.py  neo4j_importer.py  turtle.py
src/ipni/: __init__.py  cli.py  constants.py  tools.py
src/ipni/api/: main.py
src/ipni/db/: manager.py  models.py
tests/: test_api.py  test_db.py  test_tools.py
tests/data/: Name.tsv  NameRelation.tsv  Reference.tsv  Taxon.tsv  TypeMaterial.tsv
