[project]
name = "biokb_ipni"
version = "0.1.6"
description = """A Python package to import International Plant Names Index (IPNI) 
data in relational and graph databases."""
authors = [
    {name = "Christian Ebeling", email = "Christian.Ebeling@scai.fraunhofer.de"},
]
dependencies = [
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.38",
    "pymysql>=1.1.1",
    "cryptography>=41.0.0",
    "pydantic>=2.10.6",
    "fastapi[standard]>=0.115.8",
    "click>=8.1.8",
    "rdflib>=7.5.0",
    "rdflib-neo4j>=1.1",
    "tqdm>=4.67.1",
    "levenshtein>=0.27.3",
    "jellyfish>=1.0.0",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License"
]
keywords = ["knowledge graph", "knowledge base", "ethnobotany", "taxonomy", "plants"]
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
readthedocs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocstrings[python]>=1.0.0",
]
dev = [
    "tox>=4.15.0",
    "black>=24.4.2",
    "mypy>=1.19.1",
    "isort>=7.0.0",
    "build>=1.3.0",
    "twine>=6.2.0",
]
docs = [
    "eralchemy2>=1.4.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.1",
]
tests = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "testcontainers[neo4j]>=4.13.3",
    "tox>=4.32.0",
]

[project.scripts]
biokb_ipni = "biokb_ipni.cli:main"


[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["biokb_ipni"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # force type hints on function definitions
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "rdflib_neo4j.*",
    "rdflib_neo4j"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning"
]

[tool.coverage.run]
parallel = true
source = ["biokb_ipni"]

[tool.coverage.paths]
source = [
    "src/biokb_ipni",
    "*/site-packages/biokb_ipni"
]

